<package>
  <name>oro_phantom_hw</name>
  <version>0.1.0</version>
  <description>
    Orocos RTT interface to the SensAble PHANToM hardware.
  </description>
  <license>BSD</license>
  <maintainer email="jbo@jhu.edu">Jonathan Bohren</maintainer>
  <author email="jbo@jhu.edu">Jonathan Bohren</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rtt</build_depend>
  <build_depend>ocl</build_depend>
  <build_depend>kdl</build_depend>

  <build_depend>rtt_roscomm</build_depend>
  <build_depend>rtt_ros_tools</build_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>kdl_typekit</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>

  <build_depend>rtt_cartesian_trajectory_msgs</build_depend>
  <build_depend>rtt_telemanip_msgs</build_depend>
  <build_depend>rtt_geometry_msgs</build_depend>


  <run_depend>rtt</run_depend>
  <run_depend>ocl</run_depend>
  <run_depend>kdl</run_depend>

  <run_depend>rtt_roscomm</run_depend>
  <run_depend>rtt_ros_tools</run_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>kdl_typekit</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf_conversions</run_depend>

  <run_depend>rtt_cartesian_trajectory_msgs</run_depend>
  <run_depend>rtt_telemanip_msgs</run_depend>
  <run_depend>rtt_geometry_msgs</run_depend>
</package>

